--- a/css/style.css
+++ b/css/style.css
@@ -277,67 +277,17 @@ height: 95px;
     font-size: 31px;
 }
 
+
 /*--------------------
 4.2. Skills
 --------------------*/
 
 .skills-text h2 {
+    text-align: center;
 	margin: 0 0 30px;
 }
 
-.skillbar-item {
-    margin-bottom: 30px;	
-}
 
-.skillbar {
-    position: relative;
-    display: block;
-    width: 100%;
-}
-
-.skillbar-score {
-background-color: #dfdfdf;
-    padding: 7px;
-    text-align: center;
-    color: #000000;
-    font-weight: 300;
-    float: right;
-    width: 50px;
-    height: 40px;
-    vertical-align: middle;
- }
-
-.skillbar-score .score {
-    font-size: 20px;
-}
-
-.skillbar-score .percent {
-    font-size: 13px;
-}
-
-.skillbar-bar {
-display: block;
-    background-color: #dfdfdf;
-    height: 3px;
-    width: 100%;
-}
-
-.skillbar h3 {
-	font-weight: 600;
-    font-size: 13px;
-    text-transform: uppercase;
-    color: #3A3A3A;
-    letter-spacing: 2px;	
-margin: 0;
-    padding: 12px 0;
-}
-
-.skillbar-percent {
-    color: #fff;
-    background-color: #000000;
-    float: left;
-    height: 3px;
-}
 
 /*--------------------
 4.3. Portfolio
@@ -543,11 +493,6 @@ figure.effect-bubba:hover p {
     margin-bottom: 20px;    
 }
 
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 12px;
-    margin-bottom: 20px;    
-}
 
 .team-item .team-position {
     color: #000;
@@ -555,10 +500,10 @@ figure.effect-bubba:hover p {
 }
 
 .team-item p {
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 300;
-    color: #9C9C9C;
-    padding: 5px 10px 20px 10px;
+    color: rgb(0, 0, 0);
+    padding: 2px 10px 2px 10px;
 }
 
 /*--------------------
