--- a/public/css/style.css
+++ b/public/css/style.css
@@ -296,6 +296,9 @@ height: 95px;
 /*--------------------
 4.3. Portfolio
 --------------------*/
+.img-responsive{
+    background: whitesmoke;
+}
 
 figure {
 	position: relative;
@@ -313,6 +316,10 @@ figcaption {
     width: 100%;
     height: 100%;	
 }
+.ot-portfolio-item{
+    background: transparent;
+}
+
 
 .ot-portfolio-item figure figcaption > a {
     z-index: 1000;
