--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,11 @@ Import Google Fonts
 1. General
 --------------------*/
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
   margin: 0px;
     font-family: "Open Sans", Sans-serif;
